--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 
                 <div class="topnav1">
                     <a href="https://www.kfc.co.th/">
-                        <img src="/logo/logo-desk.png" alt="KFC logo" href="https://www.kfc.co.th/">
+                        <img src="/logo/logo-desk.png" alt="KFC logo">
                     </a>
                 </div>
     
